# carbon-icons-angular-prototype

./: README.md  WORKSPACE  package.json  tsconfig.json
src/: BUILD.bazel  package.json  public-api.ts  tsconfig-build.json  typings.d.ts
src/http/: BUILD.bazel  http-20.ts  http-24.ts  http-32.ts  public-api.ts  tsconfig-build.json
src/iso/: BUILD.bazel  iso-20.ts  iso-24.ts  iso-32.ts  public-api.ts  tsconfig-build.json
