package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module", "ng_package")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

# Root "@carbon/icons-angular" entry-point.
ng_module(
    name = "carbon",
    srcs = glob(
        ["*.ts"]
    ),
    bundle_dts = True,
    tsconfig = ":tsconfig-build.json",
    module_name = "@carbon/icons-angular",
    flat_module_out_file = "carbon",
    deps = [
        "//src/http:http",
        "//src/iso:iso",
        "@npm//@angular/core",
        "@npm//tslib",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "typings",
    srcs = [":typings.d.ts"],
    tsconfig = "carbon_icons_angular/tsconfig.json"
)

# Creates the @carbon/icons-angular package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":index.ts",
    entry_point_name = "carbon",
    globals = {
        "tslib": "tslib",
        "@angular/core": "ng.core",
        "@carbon/icons-angular/http": "carbon.iconsAngular.http",
        "@carbon/icons-angular/iso": "carbon.iconsAngular.iso",
        "@carbon/icon-helpers": "carbon.iconHelpers"
    },
    deps = [
        "//src/http:http",
        "//src/iso:iso",
        ":carbon"
    ]
)