load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "http",
    srcs = glob(
        ["**/*.ts"]
    ),
    # There is currently a problem with this which will be fixed by https://github.com/angular/angular/pull/32185
    bundle_dts = False,
    visibility = ["//visibility:public"],
	tsconfig = ":tsconfig-build.json",
    module_name = "@carbon/icons-angular/http",
    deps = [
        "//src:typings",
        "@npm//@angular/core",
        "@npm//tslib",
        "@npm//rxjs"
    ],
)
