load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "http",
    srcs = glob(
        ["*.ts"]
    ),
    bundle_dts = True,
    visibility = ["//visibility:public"],
	tsconfig = "//src:tsconfig-build.json",
    module_name = "@carbon/icons-angular/http",
    flat_module_out_file = "http",
    deps = [
        "//src:typings",
        "@npm//@angular/core",
        "@npm//tslib",
        "@npm//rxjs"
    ],
)
