load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "iso",
    srcs = glob(
        ["*.ts"]
    ),
    bundle_dts = True,
    visibility = ["//visibility:public"],
	tsconfig = "//src:tsconfig-build.json",
    module_name = "@carbon/icons-angular/iso",
    flat_module_out_file = "iso",
    deps = [
        "//src:typings",
        "@npm//@angular/core",
        "@npm//tslib",
        "@npm//rxjs"
    ],
)
